--- a/SchoolMgmtAPI.csproj
+++ b/SchoolMgmtAPI.csproj
@@ -6,6 +6,8 @@
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
+		<PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="3.1.5" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.5" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.5" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.5">
 			<PrivateAssets>all</PrivateAssets>
@@ -17,5 +19,9 @@
 	<!--	<ProjectReference Include="..\LoggerManager\LoggerService.csproj" /> -->
 		<ProjectReference Include="..\LoggerService\LoggerService.csproj" />
 		<ProjectReference Include="..\Repository\Repository.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="NewFolder\" />
 	</ItemGroup>
 </Project>
